Fixed overlapping email in inbox page small device

--- a/src/app/modules/emailbox/emailbox.component.scss
+++ b/src/app/modules/emailbox/emailbox.component.scss
@@ -52,7 +52,6 @@
 .detailloc {
     cursor: pointer;
     padding-right: 10px;
-    // width: 100%;
     margin-left: 44px;
     p{
         margin-bottom:0px;
@@ -127,6 +126,13 @@
 @media screen and (min-width: 320px) and (max-width: 480px) {
     .detailloc {
         min-height: 48px;
+        h5 {
+            font-size: 12px;
+            width: 50%;
+        }
+        .inline {
+            font-size: 9px;
+        }
     }
     .default-tag-buttons{
         .cyan{
@@ -144,6 +150,13 @@
 @media screen and (min-width: 480px) and (max-width: 767px) {
     .detailloc {
         min-height: 48px;
+        h5 {
+            font-size: 14px;
+            width: 60%;
+        }
+        .inline {
+            font-size: 12px;
+        }
     }
     .default-tag-buttons{
         .cyan{
